--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,8 +1,10 @@
 body{
-  padding: 0;
+  padding: 20px;
   margin: 0;
   text-align: left;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 14px;
+  color: #333;
 }
 
 #topmenu{
@@ -81,4 +83,47 @@ body{
   position: absolute;
   border: solid 1px;
   border-radius: 5%;
+}
+
+[type=password], [type=text], [type=date], select {
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  color: #555;
+  height: 24px;
+}
+
+textarea{ 
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  color: #555;
+} 
+
+.error {
+  border: 1px solid red;
+}
+
+.button {
+  display: inline-block;
+  padding: 6px 12px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+fieldset {
+  padding: 20px;
+  height: auto;
+  margin-bottom: 20px;
+  border-color: #ddd;
+  border-radius: 4px;
+}
+
+legend {
+  font-weight: bold;
+  padding: 0 10px;
 }
