--- a/public/css/base.css
+++ b/public/css/base.css
@@ -85,21 +85,30 @@ body{
   border-radius: 5%;
 }
 
-[type=password], [type=text], [type=date], select {
+input[type=password], input[type=text], input[type=date] {
   border-radius: 4px;
   border: 1px solid #ccc;
   color: #555;
   height: 24px;
+  min-width: 250px;
 }
 
-textarea{ 
+select {
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  color: #555;
+  height: 24px;
+  min-width: 150px;
+}
+
+textarea { 
   border-radius: 4px;
   border: 1px solid #ccc;
   color: #555;
 } 
 
 .error {
-  border: 1px solid red;
+  border: 1px solid red!important;
 }
 
 .button {
