--- a/public/css/base.css
+++ b/public/css/base.css
@@ -80,6 +80,8 @@ body {
   margin: 0 auto;
   text-align: left;
   border: solid 1px #DFDFDF;
+  -webkit-transition: width 0.3s;
+  transition: width 0.3s;
 }
 
 .left-menu-open ul {
@@ -104,6 +106,8 @@ body {
   margin: 0 auto;
   text-align: left;
   border: solid 1px #DFDFDF;
+  -webkit-transition: width 0.3s;
+  transition: width 0.3s;
 }
 
 .left-menu-close ul {
@@ -114,15 +118,6 @@ body {
 .left-menu-close ul li {
   padding: 10px;
   height: 30px;
-}
-
-.left-menu-toggle {
-  display: block;
-  height: 30px;
-  width: 50px;
-  bottom: 10px;
-  position: absolute;
-  border: solid 1px #DFDFDF;
 }
 
 input[type=password], input[type=text], input[type=date] {
@@ -198,7 +193,7 @@ legend {
 .library-details {
   float: left;
   text-align: left;
-  width: 800px;
+  width: auto;
   height: 250px;
   display: block;
   margin-left: 100px;
@@ -231,28 +226,41 @@ legend {
 
 .notification {
   border-radius: 4px;
-  min-width: 200px;
-  width: auto;
-  height: 20px;
-  display: block;
+  width: 450px;
+  min-height: 20px;
+  height: auto;
+  display: table-row;
   position: absolute;
-  left: 50%;
   top: 60px;
+  left: 50%;
+  margin-left: -200px;
   padding: 10px;
+  animation: bounceIn 0.8s;
+  -webkit-animation: bounceIn 0.8s;
 }
 
-.notification .notification-close {
-  cursor: pointer;
-  display: block;
-  width: 15px;
-  height: 15px;
-  padding: 0;
-  position: relative;
-  float: right;
-  font-size: 10px;
-  background-color: transparent;
-  border-radius: 4px;
+.notification-icon {
+  float: left;
+  padding: 5px;
+  display: table-cell;
+}
+
+.notification-text {
+  height: auto;
+  display: table-cell;
+}
+
+.notification-close {
+  display: table-cell;
 } 
+
+.notification-close button {
+  border-radius: 4px;
+  border: 1px;
+  font-size: 14px;
+  background-color: transparent;
+  cursor: pointer;
+}
 
 .success {
   background-color: #D4EDDA;
@@ -264,4 +272,18 @@ legend {
   background-color: #F8D7DA;
   border-color: #F5C6CA;
   color: #721C23;
+}
+
+@keyframes bounceIn {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60%{
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100%{
+    transform: scale(1);
+  }
 }
