--- a/public/css/base.css
+++ b/public/css/base.css
@@ -8,41 +8,47 @@ body {
 }
 
 #topmenu-container {
-  position: relative;
   width: 100%;
   background-color:#3197D1;
-  display: block;
-  height: 50px;
-}
-
-.topmenu {
-  left: 15px;
   margin: 0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  color: #fff;
+  height: 50px;
+  display: block;
 }
 
-.topmenu ul{
-  display: table-row;
+.topmenu-item {
+  display: block;
+  float: left;
+  height: 50px;
+  line-height: 50px;
+  white-space: nowrap;
+  text-align: center; 
+  margin: 0;
+  padding: 0 20px;
 }
 
-.topmenu ul li {
-  display: table-cell;
-  padding-right: 20px;
+.topmenu-item .helper {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
 }
 
-.topmenu ul li a {
+.topmenu-item img {
+  vertical-align: middle;
+  max-height: 30px;
+  max-width: 300px;
+}
+
+.topmenu-item a {
   color: #fff;
   text-decoration: none;
   cursor: pointer;
 }
 
+.topmenu-item a:hover {
+  text-decoration: underline;
+}
+
 .user-profile {
-  margin-right: 10px;
-  color: #fff;
   float: right;
 }
 
@@ -53,7 +59,8 @@ body {
 #content-container {
   background-color: #555;
   width: 100%;
-  overflow-y: auto;
+  overflow: hidden;
+  display: inline-block;
 }
 
 #content {
@@ -182,6 +189,11 @@ textarea {
   background-color: #2781B3;
 }
 
+.button-primary:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
 .button-secondary {
   display: inline-block;
   padding: 6px 12px;
@@ -196,6 +208,11 @@ textarea {
   color: #212529;
   border-radius: 20px;
   padding: 5px 20px; 
+}
+
+.button-secondary:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
 }
 
 fieldset {
@@ -375,6 +392,10 @@ form label {
   height: auto;
   padding: 5px;
   float: left;
+}
+
+.red {
+  color: red;
 }
 
 @keyframes bounceIn {
