--- a/public/css/base.css
+++ b/public/css/base.css
@@ -58,17 +58,29 @@ body {
 }
 
 #content-container {
-  background-color: #555;
   width: 100%;
+  float: left;
+  position: relative;
+  min-height: 100%;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+}
+
+#leftmenu {
+  float: left;
+  position: relative;
   overflow: hidden;
-  display: inline-block;
+  min-height: 100%;
 }
 
 #content {
-  background-color: #fff;
-  padding: 10px;
-  margin-left: 70px;
-  display: block;
+  /*background-color: #fff;*/
+  padding: 10px 10px 10px 25px;
+  position: relative;
+  overflow: hidden;
+  min-height: 100%;
+  width: 100%;
 }
 
 .hidden {
@@ -81,7 +93,7 @@ body {
   width: 150px;
   left: 0;
   position: absolute;
-  padding: 20px 10px;
+  padding: 20px 10px 0px 10px;
   text-align: left;
   border: solid 1px #DFDFDF;
   -webkit-transition: width 0.3s;
@@ -119,7 +131,7 @@ body {
   width: 50px;
   left: 0;
   position: absolute;
-  padding: 20px 10px;
+  padding: 20px 10px 0px 10px;
   text-align: left;
   border: solid 1px #DFDFDF;
   -webkit-transition: width 0.3s;
