--- a/public/css/base.css
+++ b/public/css/base.css
@@ -585,3 +585,14 @@ table tbody td {
 .login-box-alert ul {
   list-style: none;
 }
+#hideAll
+ {
+   position: fixed;
+   left: 0px; 
+   right: 0px; 
+   top: 0px; 
+   bottom: 0px; 
+   background-color: white;
+   z-index: 99; /* Higher than anything else in the document */
+
+ }
