--- a/public/css/base.css
+++ b/public/css/base.css
@@ -679,3 +679,8 @@ table tbody tr {
 table tbody tr:hover {
   background-color: transparent!important;
 }
+
+#mapa {
+  width: 100%;
+  height: 400px;
+}
